Upgraded Iceberg to 1.8 but needed to update Polaris too, causing problems. This needs a lot of cleaning up...